# CppLog

./: .gitignore  CMakeLists.txt  Log.cpp  Log.h  Log.sln  README.md
Log/: Log.cpp  Log.h  Log.vcxproj  Log.vcxproj.filters  pch.h
Log/include/: CommonUtil.h
Log/lib/: CommonUtil.lib
x64/Release/: Log.lib
